--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,20 @@
 {
-    "name": "maxirus/fedex",
-    "description": "FedEx API wrapper",
-    "license": "MIT",
-    "keywords": [
-        "fedex", 
-        "api",
-        "wrapper",
-        "tracking"
-        ],
-    "authors": [
-        {
-            "name": "Dan Johnson",
-            "email": "dan@maxirus.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.3"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.0.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "FedEx\\": "src"
-        }
+  "name": "donfiftyidaho/fedex",
+  "description": "Customized version FedEx API wrapper",
+  "license": "MIT",
+  "type": "project",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/donfiftyidaho/fedex-tracking-api-wrapper"
     }
+  ],
+  "require": {
+    "php": ">=5.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "FedEx\\": "src"
+    }
+  }
 }
